--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
 	id 'org.openapi.generator' version '4.3.1'
+	id 'com.github.sherter.google-java-format' version '0.9'
 }
 
 // For Open API : Generated Codeの出力先
@@ -55,5 +56,9 @@ openApiGenerate {
 	]
 }
 
+// For Code Format
+compileJava.dependsOn tasks.googleJavaFormat
+
 // For Open API : Java Compile前にCode Generation Taskを実行
-compileJava.dependsOn tasks.openApiGenerate
+tasks.googleJavaFormat.dependsOn tasks.openApiGenerate
+
